[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Emeric <emeric.dynomant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yapf = "^0.29.0"
pytest = "^5.4.1"
flask = "^1.1.2"
plotly = "^4.6.0"
numpy = "^1.18.3"
dash = "^1.11.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
